# ocs-mem-prof

./: .bazelrc  .gitignore  .gitmodules  Makefile  README.md  WORKSPACE  gen_query.sh  install.sh  primitive_queries.py  run_cache_sim.sh  setup_path.sh
analysis/: .visualize_trace.py.swp  README.md  bar_trace_tpcds.py  clustering.ipynb  table_prim.py  test_ls.csv  visualize_trace.py  viz-batch-prim.py  viz-batch-tpcds.py  viz-gpuaccel.ipynb  viz-interactive-prim-distinct.ipynb  viz-interactive-prim.ipynb  viz-interactive-query_1.ipynb  viz-interactive-tpcds.ipynb  viztools.py
cache/: BUILD.bazel  Makefile  README.md  WORKSPACE  a.out  basic_ocs_cache.h  cache_sim.cpp  cache_sim.h  constants.h  far_memory_cache.h  ocs_cache.cpp  ocs_cache.h  ocs_structs.cpp  ocs_structs.h  parse.cpp  run_cache_sim.cpp
mysql/: bmark.sql  in_memory_table_creation.sql  perm_setup.sql  populate_table.py  setup_script.sh
script/: e2e.sh  gen_primitive_queries.py  gen_query.sh  gen_query_1.sh  gen_tpcds_data.sh  gen_tpcds_query.sh  initialize_db.sh  initialize_db_ramdisk.sh  install_tools.sh  install_tpcds.sh  plot_cache_perf.m  profile_query.sh  profile_query_prim.sh  run_query.sh  run_query_prim.sh  sim_query.sh  sim_query_prim.sh
sky-workspace/: .batch_exec_prim.sh.swp  batch_exec.sh  batch_exec_prim.sh  batch_setup.sh  batch_ubmark.sh  exec.sh  kill.sh  setup.sh  sim_tpcds_batch.py  sim_ubmark_batch.py  start_dev.sh  test_controller.py  tpcds_batch.py
tests/: test_address_range.sh  test_dynamorio_elam.sh  test_dynamorio_memsyscall.sh  test_dynamorio_syscall_mix.sh
(+250 files in other folders)
