cc_binary(
    name = "run_cache_sim",
    srcs = ["run_cache_sim.cpp"],

    copts = ["-Werror", "-std=c++17"],  # Treat warnings as errors

    deps = [
        ":ocs_cache_lib",
    ],
)

cc_library(
    name = "ocs_cache_lib",
    copts = ["-Werror", "-std=c++17"],  # Treat warnings as errors

    srcs = ["ocs_cache.cpp", "ocs_structs.cpp"],
    hdrs = ["ocs_cache.h", "basic_ocs_cache.h", "ocs_structs.h"],
    deps = [
        # "@com_google_absl//absl/status", # one day i'll make this work lol
    ],
)

